--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   "prettier": {},
   "scripts": {
     "build": "pika build",
+    "deploy": "npm run build && pika publish",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts src",
     "pregenerate": "npm run build",
     "generate": "npm run generate:basic && npm run generate:notypes && npm run generate:nowrapper && npm run generate:nowarning",
@@ -54,7 +55,6 @@
     "generate:notypes": "node pkg/bin/cli example/no-types.yaml -o example/no-types.ts",
     "generate:nowarning": "node pkg/bin/cli example/basic.yaml -o example/no-warning.ts --no-warning",
     "generate:nowrapper": "node pkg/bin/cli example/basic.yaml -o example/no-wrapper.ts --nowrapper",
-    "publish": "npm run build && pika publish",
     "test": "npm run build && jest",
     "test:coverage": "npm run build && jest --coverage",
     "typecheck": "tsc --noEmit",
